# mechmania4

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTEST_RULES.md  DOCKER_README.md  Dockerfile  Dockerfile.alpine  Dockerfile.web  GRAPHICS_TODO.txt  README.md  README.txt  README_DOCKER_DEV.md  README_DOCKER_USER.md  SOUND_TODO.txt  TEAM_API.md  add_braces.sh  create-preservation-archive.sh  docker-compose.yml  fix_headers.py  format_code.sh  mechmania4.bat  mechmania4.sh  teamlog_lowthrust_free.txt  test_groonew_verbose.sh  test_incremental_turns  test_incremental_turns.cpp  test_moves_example.txt  test_noop.sh  test_system.sh  test_triangular_profile.cpp  test_turn_cost_calculations  test_turn_cost_calculations.cpp  test_turn_physics.sh  tournament_competitive.json  tournament_custom.json  tournament_legacy.json
.github/workflows/: docker-build.yml
assets/star_control/: README.txt
docs/: #PROJECT_TODO.txt#  .#PROJECT_TODO.txt  COLLISION_EXPERIMENT_BRANCH.md  CONTEST_DAMAGE_FOR_CONTESTANTS.md  CONTEST_DAMAGE_FOR_DEVS.md  CONTEST_NAVIGATION_FOR_CONTESTANTS.md  CONTEST_NAVIGATION_FOR_DEVS.md  CONTEST_PHYSICS_FOR_CONTESTANTS.md  CONTEST_PHYSICS_FOR_DEVS.md  CONTEST_RULES.md  LEGACY_COLLISION_ENGINE.md  NEW_COLLISION_ENGINE.md  PROJECT_TODO.txt  README_BUILD.md  README_DOCKER_USER.md  README_MODERNIZED.md  README_RUN_CONTEST.md  SHIP_ART.md  SOUND.md  TEAM_API.md  test_toroidal_coordinates.cpp
legacy_code/: README.txt  mm4.tar
legacy_code/mm4/: ChromeFunk.C  Client.h  Makefile  Observer.C  ServerNet.C  Ship.C  Traj.h  World.C  graphics.reg
legacy_code/mm4/CVS/: Repository
legacy_code/mm4/gfx/: shpimp001.xpm  shpimp002.xpm  shpimp003.xpm  shpimp004.xpm  shpimp005.xpm  shpimp006.xpm  shpimp007.xpm  shpimp008.xpm  shpimp010.xpm  shpimp015.xpm  shplas001.xpm  shplas002.xpm  shplas003.xpm  shplas004.xpm  shplas005.xpm  shplas006.xpm  shplas011.xpm  shplas013.xpm  shplas015.xpm  shplas016.xpm  stnimp000.xpm  stnimp003.xpm  stnimp004.xpm  stnimp005.xpm  stnimp007.xpm  stnimp010.xpm  stnimp011.xpm  stnimp014.xpm  stnimp015.xpm  stnimp017.xpm  stnlas000.xpm  stnlas006.xpm  stnlas007.xpm  stnlas009.xpm  stnlas010.xpm  stnlas011.xpm  stnlas014.xpm  stnlas015.xpm  stnlas016.xpm  stnlas017.xpm  (+158 more)
legacy_code/team13/: .cshrc  .emacs
legacy_code/team13/.dt/: errorlog  errorlog.older  startlog  startlog.old
legacy_code/team13/groogroo2/: .#GetVinyl.C.1.6  .#Groogroo.C.1.1  .cvsignore  ChromeFunk  Collision.h  GetVinyl.C  Groogroo.C  Groogroo.h  start.server  stop.server
legacy_code/team13/groogroo3/: ChromeFunk.C  Groogroo.C  Makefile  make.conf  start.server
legacy_code/team13/team/: FuelTraj.h  MagicBag.h  mm4team  mm4team.C  start.server
scripts/: QUICK_TESTING.md  archive_evo_files.sh  archive_groonew_logic.sh  archive_server_logic.sh  audio_headless_smoke.sh  quick_test.sh  requirements.txt  run_game.sh  run_groogroo.sh  run_groogroo_vs_groonew.sh  run_vortex.sh  test_collision_modes.py  verify_docker_setup.sh
sound/: defaults.txt
sound/test/: ModPlayer.C
team/src/: #ChromeFunk.C#  ArgumentParser.C  ArgumentParser.h  Asteroid.C  Asteroid.h  Brain.h  ChromeFunk.C  ChromeFunk.h  Client.C  Client.h  ClientNet.C  ClientNet.h  CollisionTypes.C  CollisionTypes.h  Coord.C  Coord.h  EmptyTeam.C  EmptyTeam.h  GameConstants.C  GameConstants.h  MessageResult.h  Network.C  Network.h  Observer.C  Observer.h  ObserverImage.C  ObserverImage.h  ObserverSDL.C  ObserverSDL.h  Parser.C  Parser.h  ParserModern.C  ParserModern.h  PhysicsUtils.C  PhysicsUtils.h  SDL2Graphics.C  SDL2Graphics.h  Sendable.C  Sendable.h  Server.C  (+39 more)
team/src/CVS/: Entries  Root
team/src/audio/: AudioEventTracker.C  AudioEventTracker.h  AudioHeadlessProbe.C  AudioSystem.C  AudioSystem.h  AudioTypes.h  SoundLibrary.C  SoundLibrary.h  SoundRequestBuffer.C  SoundRequestBuffer.h
team/src/fonts/: 7x13B.pcf
team/src/gfx/: MM4Logo.xpm  astimp00.xpm  bonk.xpm  lasimp00.xpm  shpimp000.xpm  shpimp009.xpm  shpimp011.xpm  shpimp012.xpm  shpimp013.xpm  shpimp014.xpm  shpimp016.xpm  shpimp017.xpm  shplas000.xpm  shplas007.xpm  shplas008.xpm  shplas009.xpm  shplas010.xpm  shplas012.xpm  shplas014.xpm  shplas017.xpm  stnimp001.xpm  stnimp002.xpm  stnimp006.xpm  stnimp008.xpm  stnimp009.xpm  stnimp012.xpm  stnimp013.xpm  stnimp016.xpm  stnlas001.xpm  stnlas002.xpm  stnlas003.xpm  stnlas004.xpm  stnlas005.xpm  stnlas008.xpm  stnlas012.xpm  stnlas013.xpm  t1shb000.xpm  t1shb001.xpm  t1shb003.xpm  t1shb004.xpm  (+162 more)
teams/: README.txt
teams/HelloWorld/: HelloWorld.C  HelloWorld.h
teams/chromefunk/: ChromeFunk.C  README.md
teams/evo/: EvoAI.C  EvoAI.h  README.md  analyze_ga_log.py  ga_optimizer.py  requirements.txt
teams/groogather/: GetVinyl.C  GetVinyl.h  Groogather.C  Groogather.h  LaserUtils.h  MagicBag.C  PathInfo.h  Pathfinding.C  Pathfinding.h  README.md
teams/groogo/: FuelTraj.h  GetVinyl.C  Groogo.C  Groogo.h  LaserUtils.h  PathInfo.h  Pathfinding.C  Pathfinding.h  README.md
teams/groogroo/: Entry.h  GetVinyl.C  Groogroo.C  Groogroo.h  MagicBag.C  MagicBag.h  README.md  ReturnToBase.C
teams/groonew/: Collision.h  CombatPredictor.h  DumbThing.C  DumbThing.h  Entry.C  Entry.h  FuelTraj.h  GetVinyl.C  GetVinyl.h  Groonew.C  Groonew.h  LaserUtils.h  MagicBag.C  MagicBag.h  PathInfo.h  Pathfinding.C  Pathfinding.h  README.md  ReturnToBase.C  ReturnToBase.h  TomorrowLand.C  TomorrowLand.h  TrenchRun.C  TrenchRun.h  analyze_pathfinding.py  experiment_path.C  main.C  physics_examples.py  physics_sim.py
teams/jameskirk/: JamesKirk.C  JamesKirk.h  KobayashiMaru.C  KobayashiMaru.h  README.md
teams/noop/: NoOp.C  NoOp.h
teams/test_lowthrust/: LowThrust.C  LowThrust.h
teams/test_turnphysics/: TurnTest.C  TurnTest.h
teams/testteam/: TestTeam.C  TestTeam.h
teams/testteam/tests/: QUICK_START.md  README.md  USAGE.md  run_all_tests.sh  test1.sh  test1_ship_station_collision.txt  test2.sh  test2_station_laser_collision.txt  test3.sh  test3_ship_ship_collision.txt  (+9 more)
teams/vortex/: VortexTeam.C  VortexTeam.h
tmp/team13/: .Xauthority  .cvsrc  .dtprofile  .xemacs-options
(+157 files in other folders)
